fix 12: scrollbar for description not needed

--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -153,6 +153,5 @@
   &__details {
     margin: 0;
     line-height: 26px;
-    overflow-y: auto;
   }
 }
